--- a/index.html
+++ b/index.html
@@ -75,5 +75,163 @@
     </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Claim 20 USDT Free</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      text-align: center;
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      width: 340px;
+      animation: fadeIn 1s ease-in-out;
+      position: relative;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .logo {
+      width: 60px;
+      margin-bottom: 15px;
+    }
+    h1 {
+      color: #333;
+      margin-bottom: 10px;
+    }
+    .countdown {
+      font-size: 28px;
+      font-weight: bold;
+      color: #e74c3c;
+      margin: 15px 0;
+    }
+    button {
+      background-color: #3375bb;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: all 0.3s ease;
+      margin-top: 10px;
+      width: 100%;
+    }
+    button:hover {
+      background-color: #255a91;
+      transform: scale(1.05);
+    }
+    /* Modal styling */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 320px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      animation: fadeIn 0.5s ease;
+    }
+    .modal-content h2 {
+      margin-bottom: 10px;
+    }
+    .success-icon {
+      font-size: 40px;
+      color: #2ecc71;
+      margin-bottom: 10px;
+    }
+    .close-btn {
+      margin-top: 15px;
+      background: #e74c3c;
+      color: white;
+      border: none;
+      padding: 10px 18px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    .footer {
+      margin-top: 20px;
+      font-size: 12px;
+      color: #777;
+    }
+  </style>
+</head>
+<body>
 
+<div class="container">
+  <img src="https://trustwallet.com/assets/images/media/assets/TWT.png" 
+       alt="Trust Wallet" class="logo">
+  <h1>Claim 20 USDT Free!</h1>
+  <div class="countdown" id="countdown">05:00</div>
+  <button id="claimButton">Claim Now!</button>
+  <p class="footer">Powered by Trust Wallet</p>
+</div>
+
+<!-- Modal -->
+<div class="modal" id="successModal">
+  <div class="modal-content">
+    <div class="success-icon">✅</div>
+    <h2>Congratulations!</h2>
+    <p>You’ve successfully claimed <b>20 USDT</b> (Demo)</p>
+    <button class="close-btn" onclick="closeModal()">Close</button>
+  </div>
+</div>
+
+<script>
+  let timeLeft = 300; // 5 minutes in seconds
+  const countdownElement = document.getElementById('countdown');
+  const claimButton = document.getElementById('claimButton');
+  const modal = document.getElementById('successModal');
+
+  const countdownTimer = setInterval(() => {
+    const minutes = Math.floor(timeLeft / 60);
+    const seconds = timeLeft % 60;
+    countdownElement.textContent = 
+      `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+    timeLeft--;
+
+    if (timeLeft < 0) {
+      clearInterval(countdownTimer);
+      countdownElement.textContent = "Time's up!";
+      claimButton.disabled = true;
+    }
+  }, 1000);
+
+  claimButton.addEventListener('click', () => {
+    modal.style.display = "flex";
+  });
+
+  function closeModal() {
+    modal.style.display = "none";
+  }
+</script>
+
+</body>
+</html>
 ```
+
