--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
     }, 1200);
   });
 </script>
-
+<a href="Approve.html">
+    <button>Proceed to Approve</button>
+  </a>
 </body>
 </html>
+</body>
+</html>
+
