--- a/Approve.html
+++ b/Approve.html
@@ -1,55 +1,65 @@
-
+```html
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Generate Scam QR Code Example</title>
+    <title>Scam QR Code Generator with Approve Button</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #07102a;
-            color: #e6eaf2;
-            padding: 20px;
+            font-family: Arial, sans-serif; 
+            background: #07102a; 
+            color: #e6eaf2; 
+            padding: 20px; 
+            text-align: center;
         }
         input, button {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
+            width: 100%; 
+            padding: 10px; 
+            margin-bottom: 10px; 
+            border-radius: 5px; 
+            border: 1px solid #ccc; 
         }
         button {
-            background: #2f6bff;
-            color: white;
-            cursor: pointer;
+            background: #2f6bff; 
+            color: white; 
+            cursor: pointer; 
         }
         #qrcode {
-            margin-top: 20px;
+            margin-top: 20px; 
         }
     </style>
 </head>
 <body>
     <h1>Scam QR Code Generator</h1>
-    <input type="text" id="text-input" placeholder="Enter scam URL or text here" />
-    <button id="generate-button">Generate QR Code</button>
+    <input type="text" id="text-input" placeholder="Enter your text or URL here" />
+    <button id="generate-btn">Generate QR Code</button>
     <div id="qrcode"></div>
 
+    <h2>Approve Action</h2>
+    <button id="approveBtn">Approve</button>
+
     <script>
-        $(document).ready(function() {
-            $('#generate-button').click(function() {
-                var text = $('#text-input').val();
-                $('#qrcode').empty(); // Clear previous QR code
-                if (text) {
-                    $('#qrcode').qrcode(text);
-                } else {
-                    alert('Please enter a valid URL or text');
-                }
-            });
+        // QR Code Generation
+        $('#generate-btn').click(function() {
+            var text = $('#text-input').val();
+            $('#qrcode').html('QR Code generated for: ' + text); // Replace with QR code generation logic if needed
+        });
+
+        // Approve Button Logic
+        const btn = document.getElementById("approveBtn");
+        btn.addEventListener("click", () => {
+            btn.disabled = true; // Disable the button
+            btn.style.background = "#aaa"; // Change button color to indicate processing
+            btn.innerText = "Processing..."; // Change button text
+
+            setTimeout(() => {
+                btn.innerText = "Approved"; // Change text after processing
+                btn.style.background = "#4CAF50"; // Change button color to indicate approval
+            }, 2000); // Wait 2 seconds before executing
         });
     </script>
 </body>
 </html>
-
+```
